# streamlit-course

./: .gitignore  .python-version  Clase streamlit.7z  README.md  main.py  pyproject.toml  requirements.txt  streamlit-course.code-workspace
Section-03/: text.py
Section-03/.streamlit/: config.toml
Section-04/: widgets.py
Section-05/: buttoms.py  decrement-increment.py  url.py
Section-06/: forms.py  inputs.py
Section-07/: multimedia.py
Section-08/auto-menu/: main.py
Section-08/custom-menu/: main.py
Section-09/: charts.py  dataframes.py  main.py  readme..md  tables.py
Section-09/data/: data.csv
Section-09/dataframes/: charts.py  dataframes.py  main.py  tables.py
Section-10/: card.py  extras.py  grid.py  main.py  style.css
Section-11/: cambio.py  conversor.py  imc.py  main.py  readme.md
Section-11/.streamlit/: config.toml
Section-12/: aggrid.py  main.py
Section-13/: main.py  scrapper.py  shortener.py
Section-13/.streamlit/: config.toml
Section-14/: main.py  translator.py  translator_files.py
Section-14/.streamlit/: config.toml
Section-15/: docker-compose.yml  readme.md
Section-15/app/: customers.py  db_manager.py  main.py
Section-16/: docker-compose.yml  readme.md
Section-16/app/: Dockerfile  (+2 more)
Section-17/: MOCK_DATA.csv  main.py  readme.md
Section-18/: readme.md
Section-19/: main.py  readme.md  requirements.txt  sidebar_utils.py
Section-20/: chat.py  feelings.py  main.py  readme.md  summarization.py  token.py  translator.py
app/: 20250212134310_Approved_suppliers.xlsx  Projects.xlsx
avl/: alembic.ini
scripts/: backup.sh
(+68 files in other folders)
