[project]
name = "streamlit-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "blinker>=1.9.0",
    "deep-translator>=1.11.4",
    "faker>=37.5.3",
    "huggingface-hub>=0.35.1",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.8",
    "lxml>=6.0.0",
    "mysql-connector-python>=9.4.0",
    "ollama>=0.6.0",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.3.0",
    "pypdf2>=3.0.1",
    "pyperclip>=1.9.0",
    "pyshorteners>=1.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "streamlit-aggrid>=1.1.8.post1",
    "streamlit-base-extras>=0.2.45",
    "streamlit-chat>=0.1.1",
    "streamlit-cookies-manager>=0.2.0",
    "streamlit-extras>=0.7.6",
    "tabulate>=0.9.0",
    "xlrd>=2.0.2",
]
